--- a/daili2.yaml
+++ b/daili2.yaml
@@ -103,7 +103,7 @@ proxies:
   average: 109.24
   UpdateDay: '2022-04-03T15:12:01.570799'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 12170
+  Rank: 12248
 - name: fsyd.wecanfly.top:51133@trojan
   server: fsyd.wecanfly.top
   type: trojan
@@ -118,7 +118,7 @@ proxies:
   average: 41.23
   UpdateDay: '2022-04-03T15:12:01.312309'
   PFirstFoundDay: '2022-03-13T18:26:04.261665'
-  Rank: 11111
+  Rank: 11157
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
@@ -191,7 +191,7 @@ proxies:
   average: 42.17
   UpdateDay: '2022-04-03T15:12:55.518679'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 5979
+  Rank: 6017
 - alterId: 0
   cipher: auto
   http-opts:
@@ -281,7 +281,7 @@ proxies:
   average: 40.52
   UpdateDay: '2022-04-02T15:34:33.698502'
   PFirstFoundDay: '2022-03-14T10:28:30.408415'
-  Rank: 3382
+  Rank: 3232
 - name: 45.32.94.166:31676@vmess
   server: 45.32.94.166
   type: vmess
@@ -304,7 +304,7 @@ proxies:
   average: 184.93
   UpdateDay: '2022-04-03T15:11:46.455138'
   PFirstFoundDay: '2022-03-11T20:15:20.514654'
-  Rank: 2996
+  Rank: 2980
 - name: 72.167.45.6:443@trojan
   server: 72.167.45.6
   port: 443
@@ -319,7 +319,7 @@ proxies:
   average: 209.02
   UpdateDay: '2022-04-03T15:12:55.953934'
   PFirstFoundDay: '2022-03-31T09:34:10.783687'
-  Rank: 2259
+  Rank: 2271
 - name: gzcm.v2hub.top:19221@trojan
   server: gzcm.v2hub.top
   type: trojan
@@ -335,27 +335,20 @@ proxies:
   UpdateDay: '2022-04-03T15:12:01.311294'
   PFirstFoundDay: '2022-03-14T10:28:30.211351'
   Rank: 2015
-- name: mg01.nfeng6.pp.ua:63078@vmess
-  server: mg01.nfeng6.pp.ua
-  port: 63078
-  type: vmess
-  uuid: ba22a02b-4178-39a7-b748-4d0c03b9a674
-  alterId: 0
-  cipher: auto
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-path: /t.me/nfeng6
-  ws-headers:
-    Host: mg01.nfeng6.pp.ua
-  udp: true
+- name: 14.29.124.168:25218@ss
+  server: 14.29.124.168
+  type: ss
+  country: "\U0001F1E8\U0001F1F3\u3010426\u8282\u70B9\u6C60\u3011CN"
+  port: 25218
+  password: QazEdcTgb159@$*
+  cipher: aes-128-cfb
   success_rate: 100.0
-  minimum: 7.48
-  maximum: 15.22
-  average: 11.58
-  UpdateDay: '2022-04-03T15:12:55.782261'
-  PFirstFoundDay: '2022-04-03T15:12:55.782265'
-  Rank: 1287
+  minimum: 32.36
+  maximum: 36.56
+  average: 34.98
+  UpdateDay: '2022-04-03T15:09:35.420142'
+  PFirstFoundDay: '2022-03-31T15:33:04.544856'
+  Rank: 1241
 proxy-groups:
 - name: PG-default
   type: url-test
@@ -382,7 +375,7 @@ proxy-groups:
   - 45.32.94.166:31676@vmess
   - 72.167.45.6:443@trojan
   - gzcm.v2hub.top:19221@trojan
-  - mg01.nfeng6.pp.ua:63078@vmess
+  - 14.29.124.168:25218@ss
   tolerance: 250
 rules:
 - MATCH,PG-default
