--- a/daili.yaml
+++ b/daili.yaml
@@ -216,7 +216,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 6303
+  Rank: 6353
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -319,7 +319,7 @@ proxies:
   average: 162.13
   UpdateDay: '2022-03-30T11:21:53.634848'
   PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 1937
+  Rank: 1985
 - name: 14.29.124.168:25218@ss
   server: 14.29.124.168
   type: ss
@@ -334,21 +334,27 @@ proxies:
   UpdateDay: '2022-04-03T15:09:35.420142'
   PFirstFoundDay: '2022-03-31T15:33:04.544856'
   Rank: 1847
-- name: gzcm.v2hub.top:19221@trojan
-  server: gzcm.v2hub.top
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
-  port: 19221
-  password: da8f4c57-d022-3ccc-ae2a-a70256d68c32
+- name: mg01.nfeng6.pp.ua:63078@vmess
+  server: mg01.nfeng6.pp.ua
+  port: 63078
+  type: vmess
+  uuid: ba22a02b-4178-39a7-b748-4d0c03b9a674
+  alterId: 0
+  cipher: auto
+  tls: true
   skip-cert-verify: true
+  network: ws
+  ws-path: /t.me/nfeng6
+  ws-headers:
+    Host: mg01.nfeng6.pp.ua
   udp: true
   success_rate: 100.0
-  minimum: 37.18
-  maximum: 45.07
-  average: 40.6
-  UpdateDay: '2022-04-03T15:12:01.311294'
-  PFirstFoundDay: '2022-03-14T10:28:30.211351'
-  Rank: 515
+  minimum: 7.48
+  maximum: 15.22
+  average: 11.58
+  UpdateDay: '2022-04-03T15:12:55.782261'
+  PFirstFoundDay: '2022-04-03T15:12:55.782265'
+  Rank: 452
 proxy-groups:
 - name: PG-default
   type: url-test
@@ -375,7 +381,7 @@ proxy-groups:
   - 72.167.45.6:443@trojan
   - 45.9.10.103:443@trojan
   - 14.29.124.168:25218@ss
-  - gzcm.v2hub.top:19221@trojan
+  - mg01.nfeng6.pp.ua:63078@vmess
   tolerance: 250
 rule-providers:
   anting:
