--- a/daili2.yaml
+++ b/daili2.yaml
@@ -74,6 +74,21 @@ proxies:
   UpdateDay: '2022-04-03T15:12:52.040309'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
   Rank: 18241
+- name: 106.180.225.69:1443@trojan
+  server: 106.180.225.69
+  type: trojan
+  country: "\U0001F1EF\U0001F1F5 JP"
+  port: 1443
+  password: 7x42LetRa0
+  skip-cert-verify: true
+  udp: true
+  success_rate: 100.0
+  minimum: 107.46
+  maximum: 112.45
+  average: 109.24
+  UpdateDay: '2022-04-03T15:12:01.570799'
+  PFirstFoundDay: '2022-03-11T23:05:01.549769'
+  Rank: 15107
 - name: cscu.wecanfly.top:51132@trojan
   server: cscu.wecanfly.top
   port: 51132
@@ -89,21 +104,6 @@ proxies:
   UpdateDay: '2022-04-03T15:12:55.533673'
   PFirstFoundDay: '2022-03-13T18:25:19.181411'
   Rank: 15092
-- name: 106.180.225.69:1443@trojan
-  server: 106.180.225.69
-  type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
-  port: 1443
-  password: 7x42LetRa0
-  skip-cert-verify: true
-  udp: true
-  success_rate: 100.0
-  minimum: 107.46
-  maximum: 112.45
-  average: 109.24
-  UpdateDay: '2022-04-03T15:12:01.570799'
-  PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 15017
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -146,7 +146,7 @@ proxies:
   average: 76.35
   UpdateDay: '2022-04-03T15:12:55.576128'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 11425
+  Rank: 11471
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   type: trojan
@@ -334,21 +334,21 @@ proxies:
   UpdateDay: '2022-04-03T15:09:35.420142'
   PFirstFoundDay: '2022-03-31T15:33:04.544856'
   Rank: 2004
-- name: www.zx07.top:443@trojan
-  server: www.zx07.top
-  port: 443
+- name: share.softbank.mjj-home.com:443@trojan
+  server: share.softbank.mjj-home.com
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
-  password: L1qNeGrY58ApwrRA
+  country: "\U0001F1FA\U0001F1F8 US"
+  port: 443
+  password: share.mjj-home.com
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.21
-  maximum: 1062.26
-  average: 383.46
-  UpdateDay: '2022-04-03T15:12:56.476885'
-  PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 621
+  minimum: 135.45
+  maximum: 140.96
+  average: 138.41
+  UpdateDay: '2022-04-03T15:12:37.239849'
+  PFirstFoundDay: '2022-03-12T03:14:53.059988'
+  Rank: 657
 proxy-groups:
 - name: PG-default
   type: url-test
@@ -359,8 +359,8 @@ proxy-groups:
   - 101.132.192.212:30003@ss
   - music.desperadoj.com:30003@ss
   - 101.91.121.247:50004@ss
-  - cscu.wecanfly.top:51132@trojan
   - 106.180.225.69:1443@trojan
+  - cscu.wecanfly.top:51132@trojan
   - fkgfw-prod.i.sxl.cn:443@ss
   - hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   - 2.58.242.43:443@trojan
@@ -375,7 +375,7 @@ proxy-groups:
   - 139.162.122.205:3845@vmess
   - 45.9.10.103:443@trojan
   - 14.29.124.168:25218@ss
-  - www.zx07.top:443@trojan
+  - share.softbank.mjj-home.com:443@trojan
   tolerance: 250
 rules:
 - MATCH,PG-default
