--- a/daili.yaml
+++ b/daili.yaml
@@ -60,7 +60,7 @@ proxies:
   average: 10.48
   UpdateDay: '2022-04-03T15:12:01.215763'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 21233
+  Rank: 21308
 - name: 101.91.121.247:50004@ss
   server: 101.91.121.247
   port: 50004
@@ -88,7 +88,7 @@ proxies:
   average: 109.24
   UpdateDay: '2022-04-03T15:12:01.570799'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 16165
+  Rank: 16265
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -305,7 +305,7 @@ proxies:
   average: 55.16
   UpdateDay: '2022-04-03T15:12:55.575970'
   PFirstFoundDay: '2022-03-31T03:35:27.638826'
-  Rank: 2277
+  Rank: 2370
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -321,29 +321,21 @@ proxies:
   UpdateDay: '2022-04-03T15:12:56.476885'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
   Rank: 1905
-- name: 45.32.94.166:31676@vmess
-  server: 45.32.94.166
-  type: vmess
-  country: "\U0001F1FA\U0001F1F8\u3010426\u8282\u70B9\u6C60\u3011US"
-  port: 31676
-  uuid: 6f3ec45c-5283-40e8-aea9-7749f4c75753
-  alterId: 0
-  cipher: auto
-  network: http
-  servername: 45.32.94.166
-  http-opts:
-    method: GET
-    path:
-    - /
-  h2-opts: {}
+- name: www.tokyo2023.ga:443@trojan
+  server: www.tokyo2023.ga
+  port: 443
+  type: trojan
+  country: "\U0001F1FA\U0001F1F8 US"
+  password: 4f7dc540-d244-4e64-af21-4b5bb300add3
   skip-cert-verify: true
+  udp: true
   success_rate: 100.0
-  minimum: 173.54
-  maximum: 205.89
-  average: 184.93
-  UpdateDay: '2022-04-03T15:11:46.455138'
-  PFirstFoundDay: '2022-03-11T20:15:20.514654'
-  Rank: 1324
+  minimum: 36.85
+  maximum: 46.75
+  average: 40.27
+  UpdateDay: '2022-04-03T15:12:55.497151'
+  PFirstFoundDay: '2022-03-14T10:29:40.191643'
+  Rank: 1359
 proxy-groups:
 - name: PG-default
   type: url-test
@@ -370,7 +362,7 @@ proxy-groups:
   - 14.29.124.168:25218@ss
   - tky3.ssgnode.ga:443@trojan
   - www.zx07.top:443@trojan
-  - 45.32.94.166:31676@vmess
+  - www.tokyo2023.ga:443@trojan
   tolerance: 250
 rule-providers:
   anting:
