--- a/daili2.yaml
+++ b/daili2.yaml
@@ -60,7 +60,7 @@ proxies:
   average: 10.48
   UpdateDay: '2022-04-03T15:12:01.215763'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 23598
+  Rank: 23698
 - name: 101.91.121.247:50004@ss
   server: 101.91.121.247
   port: 50004
@@ -88,7 +88,7 @@ proxies:
   average: 109.24
   UpdateDay: '2022-04-03T15:12:01.570799'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 17310
+  Rank: 17405
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -131,7 +131,7 @@ proxies:
   average: 76.35
   UpdateDay: '2022-04-03T15:12:55.576128'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 13119
+  Rank: 13169
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   type: trojan
@@ -146,7 +146,7 @@ proxies:
   average: 552.65
   UpdateDay: '2022-04-03T15:12:02.916500'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 12854
+  Rank: 12932
 - name: cscu.wecanfly.top:51132@trojan
   server: cscu.wecanfly.top
   port: 51132
@@ -176,7 +176,7 @@ proxies:
   average: 40.55
   UpdateDay: '2022-03-31T21:34:41.122621'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 9542
+  Rank: 9642
 - alterId: 0
   cipher: auto
   http-opts:
@@ -276,7 +276,7 @@ proxies:
   average: 55.16
   UpdateDay: '2022-04-03T15:12:55.575970'
   PFirstFoundDay: '2022-03-31T03:35:27.638826'
-  Rank: 3532
+  Rank: 3632
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -321,21 +321,21 @@ proxies:
   UpdateDay: '2022-04-03T15:09:35.420142'
   PFirstFoundDay: '2022-03-31T15:33:04.544856'
   Rank: 3024
-- name: fsyd.wecanfly.top:51133@trojan
-  server: fsyd.wecanfly.top
+- name: share.softbank.mjj-home.com:443@trojan
+  server: share.softbank.mjj-home.com
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
-  port: 51133
-  password: 5eaea1b9-b977-3391-b7cb-370addb40ce2
+  country: "\U0001F1FA\U0001F1F8 US"
+  port: 443
+  password: share.mjj-home.com
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.67
-  maximum: 45.59
-  average: 41.23
-  UpdateDay: '2022-04-03T15:12:01.312309'
-  PFirstFoundDay: '2022-03-13T18:26:04.261665'
-  Rank: 2893
+  minimum: 135.45
+  maximum: 140.96
+  average: 138.41
+  UpdateDay: '2022-04-03T15:12:37.239849'
+  PFirstFoundDay: '2022-03-12T03:14:53.059988'
+  Rank: 2966
 proxy-groups:
 - name: PG-default
   type: url-test
@@ -362,7 +362,7 @@ proxy-groups:
   - www.tokyo2023.ga:443@trojan
   - www.zx07.top:443@trojan
   - 14.29.124.168:25218@ss
-  - fsyd.wecanfly.top:51133@trojan
+  - share.softbank.mjj-home.com:443@trojan
   tolerance: 250
 rules:
 - MATCH,PG-default
