--- a/daili.yaml
+++ b/daili.yaml
@@ -102,6 +102,21 @@ proxies:
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
   Rank: 14593
+- name: 2.58.242.43:443@trojan
+  server: 2.58.242.43
+  port: 443
+  type: trojan
+  country: "\U0001F1F9\U0001F1FC TW"
+  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  skip-cert-verify: true
+  udp: true
+  success_rate: 100.0
+  minimum: 73.87
+  maximum: 79.68
+  average: 76.35
+  UpdateDay: '2022-04-03T15:12:55.576128'
+  PFirstFoundDay: '2022-03-14T21:36:22.498526'
+  Rank: 13463
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   type: trojan
@@ -117,21 +132,6 @@ proxies:
   UpdateDay: '2022-04-03T15:12:01.307812'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
   Rank: 13441
-- name: 2.58.242.43:443@trojan
-  server: 2.58.242.43
-  port: 443
-  type: trojan
-  country: "\U0001F1F9\U0001F1FC TW"
-  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
-  skip-cert-verify: true
-  udp: true
-  success_rate: 100.0
-  minimum: 73.87
-  maximum: 79.68
-  average: 76.35
-  UpdateDay: '2022-04-03T15:12:55.576128'
-  PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 13415
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   type: trojan
@@ -322,20 +322,18 @@ proxies:
   UpdateDay: '2022-04-03T15:12:37.239849'
   PFirstFoundDay: '2022-03-12T03:14:53.059988'
   Rank: 3503
-- name: 14.29.124.168:25218@ss
-  server: 14.29.124.168
-  type: ss
-  country: "\U0001F1E8\U0001F1F3\u3010426\u8282\u70B9\u6C60\u3011CN"
-  port: 25218
-  password: QazEdcTgb159@$*
-  cipher: aes-128-cfb
+- name: www.ggchk.ga:443@trojan
+  password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
+  port: 443
+  server: www.ggchk.ga
+  type: trojan
   success_rate: 100.0
-  minimum: 32.36
-  maximum: 36.56
-  average: 34.98
-  UpdateDay: '2022-04-03T15:09:35.420142'
-  PFirstFoundDay: '2022-03-31T15:33:04.544856'
-  Rank: 3117
+  minimum: 52.3
+  maximum: 63.21
+  average: 56.06
+  UpdateDay: '2022-04-03T15:12:54.456600'
+  PFirstFoundDay: '2022-03-11T21:04:39.779731'
+  Rank: 3079
 proxy-groups:
 - name: PG-default
   type: url-test
@@ -348,8 +346,8 @@ proxy-groups:
   - 101.91.121.247:50004@ss
   - 106.180.225.69:1443@trojan
   - fkgfw-prod.i.sxl.cn:443@ss
-  - hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   - 2.58.242.43:443@trojan
+  - hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   - 210.152.13.168:443@trojan
   - cscu.wecanfly.top:51132@trojan
   - hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
@@ -362,7 +360,7 @@ proxy-groups:
   - www.tokyo2023.ga:443@trojan
   - www.zx07.top:443@trojan
   - share.softbank.mjj-home.com:443@trojan
-  - 14.29.124.168:25218@ss
+  - www.ggchk.ga:443@trojan
   tolerance: 250
 rule-providers:
   anting:
